tests/errors/semantics/number_must_be_on_rhs_for_ptrarith.odl
main :: () -> void  {
    x := 0;
    xp := &x;

    1 + xp;
};